added game area of tiles & reset button

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,36 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Tick Tac Toe 2 Player</title>
 </head>
+
 <body>
-    
+
+    <!--Tick-Tac-Toe Gaming Area-->
+
+    <main class="base">
+        <section class="title">
+            <h1>Tic Tac Toe</h1>
+            <h1>2 Player </h1>
+            <br>
+        </section>
+        <section class="game-container">
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+        </section>
+        <section class="display announcer hide"></section>
+        <section class="display">
+            Player <span class="display-player playerX">X</span>'s turn
+        </section>
+        <section class="controls">
+            <button id="reset">Reset</button>
+        </section>
+    </main>
 </body>
+
 </html>
