--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
             <br>
         </section>
         <section class="game-container">
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
+            <div class="game-tile"></div>
+            <div class="game-tile"></div>
+            <div class="game-tile"></div>
+            <div class="game-tile"></div>
+            <div class="game-tile"></div>
+            <div class="game-tile"></div>
+            <div class="game-tile"></div>
+            <div class="game-tile"></div>
+            <div class="game-tile"></div>
         </section>
         <section class="display announcer hide"></section>
         <section class="display">
-            Player <span class="display-player playerX">X</span>'s turn
+            Player <span class="display-player playerX">X</span> turn
         </section>
         <section class="controls">
             <button id="reset">Reset</button>
