added description, styled description

--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
 
     <main class="base">
         <section class="title">
-            <h1>Tic Tac Toe</h1>
-            <h1>2 Player </h1>
-            <br>
         </section>
         <section class="game-container">
             <div class="game-tile"></div>
@@ -39,6 +36,20 @@
             <button id="reset">Reset</button>
         </section>
     </main>
+
+    <!--Game-Information-->
+
+    <div class="game-information">
+        <div>
+            <h1>How To Play</h1>
+            <li>The game is played on a grid that's 3 squares by 3 squares.</li>
+            <li>You are X, your friend is O. Players take turns putting their marks in empty squares.</li>
+            <li>The first player to get 3 marks in a row (up, down, across, or diagonally) is the winner.</li>
+            <li>When all 9 squares are full, the game is over.</li>
+            <li>To restart the game, click <strong>reset</strong></li>
+        </div>
+      </div>
+
 </body>
 
 </html>
