--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./assets/javascript/index.js"></script>
+    <script src="../assets/javascript/index.js"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Tick Tac Toe 2 Player</title>
 </head>
@@ -48,8 +48,35 @@
             <li>When all 9 squares are full, the game is over.</li>
             <li>To restart the game, click <strong>reset</strong></li>
         </div>
-      </div>
+    </div>
 
+    <div class="wrapper">
+        <div class="icon facebook">
+            <div class="tooltip">
+                Facebook
+            </div>
+            <span><i class="fab fa-facebook-f"></i></span>
+        </div>
+        <div class="icon twitter">
+            <div class="tooltip">
+                Twitter
+            </div>
+            <span><i class="fab fa-twitter"></i></span>
+        </div>
+        <div class="icon instagram">
+            <div class="tooltip">
+                Instagram
+            </div>
+            <span><i class="fab fa-instagram"></i></span>
+        </div>
+        <div class="icon youtube">
+            <div class="tooltip">
+                YouTube
+            </div>
+            <span<i class="fab fa-youtube"></i></span>
+        </div>
+    </div>
+    <script src="https://kit.fontawesome.com/a746b3e7fd.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
