added game title, styled social media (margins)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <main class="base">
         <section class="title">
+            <h2>Tick Tack Toe</h2>
         </section>
         <section class="game-container">
             <div class="game-tile"></div>
@@ -33,7 +34,7 @@
             Player <span class="display-player playerX">X</span> turn
         </section>
         <section class="controls">
-            <button id="reset">Reset</button>
+            <button id="reset">Reset Game</button>
         </section>
     </main>
 
