fixed footer error not linking to website, resized font size

--- a/index.html
+++ b/index.html
@@ -51,31 +51,27 @@
         </div>
     </div>
 
-    <div class="wrapper">
-        <div class="icon facebook">
-            <div class="tooltip">
-                Facebook
-            </div>
-            <span><i class="fab fa-facebook-f"></i></span>
-        </div>
-        <div class="icon twitter">
-            <div class="tooltip">
-                Twitter
-            </div>
-            <span><i class="fab fa-twitter"></i></span>
-        </div>
-        <div class="icon instagram">
-            <div class="tooltip">
-                Instagram
-            </div>
-            <span><i class="fab fa-instagram"></i></span>
-        </div>
-        <div class="icon youtube">
-            <div class="tooltip">
-                YouTube
-            </div>
-            <span<i class="fab fa-youtube"></i></span>
-        </div>
+    <div>
+        <footer>
+            <ul class="social-networks">
+                <li>
+                    <a href="https://en-gb.facebook.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/home" target="_blank" rel="noopener"
+                        aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="https://youtube.com" target="_blank" rel="noopener"
+                        aria-label="Visit our YouTube channel (opens in a new tab)"><i class="fab fa-youtube"></i></a>
+                </li>
+                <li>
+                    <a href="https://instagram.com" target="_blank" rel="noopener"
+                        aria-label="Visit our instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+                </li>
+            </ul>
+        </footer>
     </div>
     <script src="https://kit.fontawesome.com/a746b3e7fd.js" crossorigin="anonymous"></script>
 </body>
