attempt fix javascript not loading on public domain

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../assets/javascript/index.js"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Tick Tac Toe 2 Player</title>
 </head>
@@ -73,7 +72,10 @@
             </ul>
         </footer>
     </div>
+    
     <script src="https://kit.fontawesome.com/a746b3e7fd.js" crossorigin="anonymous"></script>
+
+    <script src="assets/javascript/index.js"></script>
 </body>
 
 </html>
