--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <div class="game-information">
         <div>
             <h1>How To Play</h1>
-            <li>The game is played on a grid that's 3 squares by 3 squares.</li>
-            <li>You are X, your friend is O. Players take turns putting their marks in empty squares.</li>
-            <li>The first player to get 3 marks in a row (up, down, across, or diagonally) is the winner.</li>
-            <li>When all 9 squares are full, the game is over.</li>
-            <li>To restart the game, click <strong>reset</strong></li>
+            <p>The game is played on a grid that's 3 squares by 3 squares.</p>
+            <p>You are X, your friend is O. Players take turns putting their marks in empty squares.</p>
+            <p>The first player to get 3 marks in a row (up, down, across, or diagonally) is the winner.</p>
+            <p>When all 9 squares are full, the game is over.</p>
+            <p>To restart the game, click <strong>reset</strong></p>
         </div>
     </div>
 
