added .md ready to edit

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <div class="game-tile"></div>
             <div class="game-tile"></div>
         </section>
+
+    <!--Announcements / Controls / Reset-->
+
         <section class="display announcer hide"></section>
         <section class="display">
             Player <span class="display-player playerX">X</span> turn
@@ -49,6 +52,8 @@
             <p>To restart the game, click <strong>reset</strong></p>
         </div>
     </div>
+
+    <!--Website Social Media Links Footer-->
 
     <div>
         <footer>
@@ -72,6 +77,8 @@
             </ul>
         </footer>
     </div>
+
+    <!--Scripts (Font Awesome & Javascript Link)-->
     
     <script src="https://kit.fontawesome.com/a746b3e7fd.js" crossorigin="anonymous"></script>
 
